Add ingredients and steps to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,32 @@
 <body>
     <h1>Lasagna</h1>
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
+
+    <img src="https://recipe-graphics.grocerywebsite.com/0_GraphicsRecipes/1391_4k.jpg" alt="A slice of lasagna" width="350">
+
+    <h2>Lasagna</h2>
+    <p>What makes this classic lasagna recipe so spectacular? Homemade meat sauce and plenty of cheese. Best of all, it's easy to make lasagna ahead of time so dinner can be ready in a flash.</p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>Ground beef</li>
+        <li>Lasagna noodles</li>
+        <li>Crushed tomatoes</li>
+        <li>Sugar</li>
+        <li>Cheese</li>
+        <li>Eggs</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ol>
+        <li>Cook pasta sheets.</li>
+        <li>Make meat sauce.</li>
+        <li>Layer sauce, pasta, and cheese in a dish.</li>
+        <li>Repeat layers and top with cheese.</li>
+        <li>Bake until bubbly, then serve.</li>
+    </ol>
+
+
 </body>
 </html>
