--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="/recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li>
+            <a href="/recipes/lasagna.html">Lasagna</a>
+        </li>
+        <li>
+            <a href="/recipes/chicken-cacciatore.html">Chicken Cacciatore</a>
+        </li>
+        <li>
+            <a href="/recipes/arroz-con-pollo.html">Arroz Con Pollo</a>
+        </li>
+    </ul>
 </body>
 </html>
