--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
 
     <img src="https://recipe-graphics.grocerywebsite.com/0_GraphicsRecipes/1391_4k.jpg" alt="A slice of lasagna" width="350">
 
-    <h2>Lasagna</h2>
+    <h2>Description:</h2>
     <p>What makes this classic lasagna recipe so spectacular? Homemade meat sauce and plenty of cheese. Best of all, it's easy to make lasagna ahead of time so dinner can be ready in a flash.</p>
 
     <h3>Ingredients:</h3>
@@ -33,7 +33,5 @@
         <li>Repeat layers and top with cheese.</li>
         <li>Bake until bubbly, then serve.</li>
     </ol>
-
-
 </body>
 </html>
