--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <ul>
         <li>
-            <a href="/recipes/lasagna.html">Lasagna</a>
+            <a href="recipes/lasagna.html">Lasagna</a>
         </li>
         <li>
-            <a href="/recipes/chicken-cacciatore.html">Chicken Cacciatore</a>
+            <a href="recipes/chicken-cacciatore.html">Chicken Cacciatore</a>
         </li>
         <li>
-            <a href="/recipes/arroz-con-pollo.html">Arroz Con Pollo</a>
+            <a href="recipes/arroz-con-pollo.html">Arroz Con Pollo</a>
         </li>
     </ul>
 </body>
