Fix formatting of recipe list in index.html

--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li>
-            <a href="recipes/lasagna.html">Lasagna</a>
-        </li>
-        <li>
-            <a href="recipes/chicken-cacciatore.html">Chicken Cacciatore</a>
-        </li>
-        <li>
-            <a href="recipes/arroz-con-pollo.html">Arroz Con Pollo</a>
-        </li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/chicken-cacciatore.html">Chicken Cacciatore</a></li>
+        <li><a href="recipes/arroz-con-pollo.html">Arroz Con Pollo</a></li>
     </ul>
 </body>
 </html>
