Style titles of all pages and center

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <ul>
+    <ul class="recipe-list">
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/chicken-cacciatore.html">Chicken Cacciatore</a></li>
         <li><a href="recipes/arroz-con-pollo.html">Arroz Con Pollo</a></li>
