Center recipe images and resize

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
 
     <h1>Lasagna</h1>
 
-    <img src="https://recipe-graphics.grocerywebsite.com/0_GraphicsRecipes/1391_4k.jpg" alt="A slice of lasagna" width="350">
+    <img class="recipe-img" src="https://recipe-graphics.grocerywebsite.com/0_GraphicsRecipes/1391_4k.jpg" alt="A slice of lasagna" width="350">
 
     <h2>Description:</h2>
     <p>What makes this classic lasagna recipe so spectacular? Homemade meat sauce and plenty of cheese. Best of all, it's easy to make lasagna ahead of time so dinner can be ready in a flash.</p>
