--- a/recipes/arroz-con-pollo.html
+++ b/recipes/arroz-con-pollo.html
@@ -11,7 +11,7 @@
 
     <h1>Arroz Con Pollo</h1>
 
-    <img src="https://www.thespruceeats.com/thmb/wiThVWc3EHKFE8fVSIsDHUhMdRQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/arroz-con-pollo-2342762-hero-01-83fba8d52e6049de9227427f283fff96.jpg" alt="A pot of arroz con pollo" width="350">
+    <img class="recipe-img" src="https://www.thespruceeats.com/thmb/wiThVWc3EHKFE8fVSIsDHUhMdRQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/arroz-con-pollo-2342762-hero-01-83fba8d52e6049de9227427f283fff96.jpg" alt="A pot of arroz con pollo" width="350">
 
     <h2>Description:</h2>
     <p>This classic dish appears throughout many regions of the Americas because of its universal appeal and the Iberian heritage shared among Latin American countries.</p>
