Fix alignment for ingredients and steps list

--- a/recipes/arroz-con-pollo.html
+++ b/recipes/arroz-con-pollo.html
@@ -18,7 +18,7 @@
         <p>This classic dish appears throughout many regions of the Americas because of its universal appeal and the Iberian heritage shared among Latin American countries.</p>
 
         <h3>Ingredients:</h3>
-        <ul>
+        <ul class="recipe-ingredients-list">
             <li>Chicken pieces</li>
             <li>Olive oil</li>
             <li>Onion</li>
@@ -32,7 +32,7 @@
         </ul>
 
         <h3>Steps:</h3>
-        <ol>
+        <ol class="recipe-steps-list">
             <li>Brown the chicken in a pan with oil.</li>
             <li>Add onion, bell pepper, and garlic; cook until soft.</li>
             <li>Stir in rice, tomatoes, broth, and spices.</li>
