--- a/recipes/chicken-cacciatore.html
+++ b/recipes/chicken-cacciatore.html
@@ -18,7 +18,7 @@
         <p>Chicken cacciatore is an Italian dish where chicken is simmered with tomatoes, onions, peppers, herbs, and sometimes wine. It's a hearty, rustic meal with rich flavors, often served with pasta or bread.</p>
 
         <h3>Ingredients:</h3>
-        <ul>
+        <ul class="recipe-ingredients-list">
             <li>Chicken pieces</li>
             <li>Olive oil</li>
             <li>Onion</li>
@@ -30,7 +30,7 @@
         </ul>
 
         <h3>Steps:</h3>
-        <ol>
+        <ol class="recipe-steps-list">
             <li>Heat oil in a pan and brown the chicken.</li>
             <li>Add onion, bell pepper, and garlic; cook until soft.</li>
             <li>Stir in tomatoes and herbs; season with salt and pepper.</li>
