--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,7 +18,7 @@
         <p>What makes this classic lasagna recipe so spectacular? Homemade meat sauce and plenty of cheese. Best of all, it's easy to make lasagna ahead of time so dinner can be ready in a flash.</p>
 
         <h3>Ingredients:</h3>
-        <ul>
+        <ul class="recipe-ingredients-list">
             <li>Ground beef</li>
             <li>Lasagna noodles</li>
             <li>Crushed tomatoes</li>
@@ -28,7 +28,7 @@
         </ul>
 
         <h3>Steps:</h3>
-        <ol>
+        <ol class="recipe-steps-list">
             <li>Cook pasta sheets.</li>
             <li>Make meat sauce.</li>
             <li>Layer sauce, pasta, and cheese in a dish.</li>
