Wrap each recipe description, ingredients, steps in a <div>

--- a/recipes/arroz-con-pollo.html
+++ b/recipes/arroz-con-pollo.html
@@ -14,31 +14,37 @@
     <img class="recipe-img" src="https://www.thespruceeats.com/thmb/wiThVWc3EHKFE8fVSIsDHUhMdRQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/arroz-con-pollo-2342762-hero-01-83fba8d52e6049de9227427f283fff96.jpg" alt="A pot of arroz con pollo" width="350">
 
     <main>
-        <h2>Description:</h2>
-        <p>This classic dish appears throughout many regions of the Americas because of its universal appeal and the Iberian heritage shared among Latin American countries.</p>
+        <div class="recipe-description">
+            <h2>Description:</h2>
+            <p>This classic dish appears throughout many regions of the Americas because of its universal appeal and the Iberian heritage shared among Latin American countries.</p>
+        </div>
 
-        <h3>Ingredients:</h3>
-        <ul class="recipe-ingredients-list">
-            <li>Chicken pieces</li>
-            <li>Olive oil</li>
-            <li>Onion</li>
-            <li>Bell pepper</li>
-            <li>Garlic</li>
-            <li>Rice</li>
-            <li>Chicken broth</li>
-            <li>Tomatoes</li>
-            <li>Peas</li>
-            <li>Spices</li>
-        </ul>
+        <div class="recipe-ingredients">
+            <h3>Ingredients:</h3>
+            <ul class="recipe-ingredients-list">
+                <li>Chicken pieces</li>
+                <li>Olive oil</li>
+                <li>Onion</li>
+                <li>Bell pepper</li>
+                <li>Garlic</li>
+                <li>Rice</li>
+                <li>Chicken broth</li>
+                <li>Tomatoes</li>
+                <li>Peas</li>
+                <li>Spices</li>
+            </ul>
+        </div>
 
-        <h3>Steps:</h3>
-        <ol class="recipe-steps-list">
-            <li>Brown the chicken in a pan with oil.</li>
-            <li>Add onion, bell pepper, and garlic; cook until soft.</li>
-            <li>Stir in rice, tomatoes, broth, and spices.</li>
-            <li>Simmer until the rice is tender and the chicken is cooked.</li>
-            <li>Add peas at the end and serve warm.</li>
-        </ol>    
+        <div class="recipe-steps">
+            <h3>Steps:</h3>
+            <ol class="recipe-steps-list">
+                <li>Brown the chicken in a pan with oil.</li>
+                <li>Add onion, bell pepper, and garlic; cook until soft.</li>
+                <li>Stir in rice, tomatoes, broth, and spices.</li>
+                <li>Simmer until the rice is tender and the chicken is cooked.</li>
+                <li>Add peas at the end and serve warm.</li>
+            </ol>
+        </div>    
     </main>
     
 </body>
