--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,27 +14,34 @@
     <img class="recipe-img" src="https://recipe-graphics.grocerywebsite.com/0_GraphicsRecipes/1391_4k.jpg" alt="A slice of lasagna" width="350">
 
     <main>
-        <h2>Description:</h2>
-        <p>What makes this classic lasagna recipe so spectacular? Homemade meat sauce and plenty of cheese. Best of all, it's easy to make lasagna ahead of time so dinner can be ready in a flash.</p>
+        <div class="recipe-description">
+            <h2>Description:</h2>
+            <p>What makes this classic lasagna recipe so spectacular? Homemade meat sauce and plenty of cheese. Best of all, it's easy to make lasagna ahead of time so dinner can be ready in a flash.</p>
+        </div>
 
-        <h3>Ingredients:</h3>
-        <ul class="recipe-ingredients-list">
-            <li>Ground beef</li>
-            <li>Lasagna noodles</li>
-            <li>Crushed tomatoes</li>
-            <li>Sugar</li>
-            <li>Cheese</li>
-            <li>Eggs</li>
-        </ul>
+        
+        <div class="recipe-ingredients">
+            <h3>Ingredients:</h3>
+            <ul class="recipe-ingredients-list">
+                <li>Ground beef</li>
+                <li>Lasagna noodles</li>
+                <li>Crushed tomatoes</li>
+                <li>Sugar</li>
+                <li>Cheese</li>
+                <li>Eggs</li>
+            </ul>
+        </div>
 
-        <h3>Steps:</h3>
-        <ol class="recipe-steps-list">
-            <li>Cook pasta sheets.</li>
-            <li>Make meat sauce.</li>
-            <li>Layer sauce, pasta, and cheese in a dish.</li>
-            <li>Repeat layers and top with cheese.</li>
-            <li>Bake until bubbly, then serve.</li>
-        </ol>  
+        <div class="recipe-steps">
+            <h3>Steps:</h3>
+            <ol class="recipe-steps-list">
+                <li>Cook pasta sheets.</li>
+                <li>Make meat sauce.</li>
+                <li>Layer sauce, pasta, and cheese in a dish.</li>
+                <li>Repeat layers and top with cheese.</li>
+                <li>Bake until bubbly, then serve.</li>
+            </ol>
+        </div>  
     </main>
     
 </body>
